--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-    <link href="css/bootstrap.min.css?ver=1.1.0" rel="stylesheet">
-    <link href="css/font-awesome/css/all.min.css?ver=1.1.0" rel="stylesheet">
-    <link href="css/aos.css?ver=1.1.0" rel="stylesheet">
-    <link href="css/ekko-lightbox.css?ver=1.1.0" rel="stylesheet">
-    <link href="css/main.css?ver=1.1.0" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/font-awesome/css/all.min.css" rel="stylesheet">
+    <link href="css/aos.css" rel="stylesheet">
+    <link href="css/ekko-lightbox.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
     <noscript>
       <style type="text/css">
         [data-aos] {
@@ -51,17 +51,6 @@
     <div class="container"><a href="#"><svg class="heart" viewBox="0 0 32 29.6"><path d="M23.6,0c-3.4,0-6.3,2.7-7.6,5.6C14.7,2.7,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,9.4,9.5,11.9,16,21.2c6.1-9.3,16-12.1,16-21.2C32,3.8,28.2,0,23.6,0z"/>
 </svg></a>
       <h1 class="h2"><a class="pl-4 navbar-brand text-light" href="#">The Wedding of Rizkia & Tovik</a></h1>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ww-navbarNav" aria-controls="ww-navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-      <div class="collapse navbar-collapse text-uppercase" id="ww-navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link smooth-scroll text-light" href="#home">Home</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll text-light" href="#couple">Couple</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll text-light" href="#events">Events</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll text-light" href="#people">People</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll text-light" href="#gallery">Gallery</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll text-light" href="#rsvp">RSVP</a></li>
-        </ul>
-      </div>
     </div>
   </nav>
 </div>
@@ -70,7 +59,7 @@
     <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Rizkia & Tovik</h2>
     <div class="row text-center">      
       <div class="col-md-6">
-        <div class="mt-3"><img class="img-fluid" style="height: 1000px;" src="images/kia.jpg" alt="Bride" data-aos="flip-right" data-aos-duration="1000"/>
+        <div class="mt-3"><img class="img-fluid" style="height: auto;" src="images/kia.jpg" alt="Bride" data-aos="flip-right" data-aos-duration="1000"/>
           <p class="pt-3 text-center text-muted">Putri pertama dari Bpk. Akhirizal Lubis, S.Pd. dan Ibu Rosmaniah, S.E..</p>
           <h3 class="h2 ww-title">Rizkia Maulidini Lubis, S.Ak.</h3>
           <div class="ww-social-links">
@@ -79,7 +68,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <div class="mt-3"><img class="img-fluid" style="height: 1000px;" src="images/tovik.jpg" alt="Groom" data-aos="flip-left" data-aos-duration="1000"/>
+        <div class="mt-3"><img class="img-fluid" style="height: auto;" src="images/tovik.jpg" alt="Groom" data-aos="flip-left" data-aos-duration="1000"/>
           <p class="pt-3 text-center text-muted">Putra kedua dari Bpk. Suhadi (Alm) dan Ibu Purwatin</p>
           <h3 class="h2 ww-title">Briptu Tovik Akbar</h3>
           <div class="ww-social-links">
@@ -169,11 +158,10 @@
           <div class="card" data-groups="[&quot;perkenalan&quot;]"><a href="images/gallery/10.JPG" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery/10.JPG" alt="Perkenalan 1"/></a></div>
           <div class="card" data-groups="[&quot;perkenalan&quot;]"><a href="images/gallery/11.JPG" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery/11.JPG" alt="Perkenalan 2"/></a></div>
           <div class="card" data-groups="[&quot;perkenalan&quot;]"><a href="images/gallery/12.JPG" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery/12.JPG" alt="Perkenalan 3"/></a></div>
-          <div class="card" data-groups="[&quot;perkenalan&quot;]"><a href="images/gallery/13.JPG" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery/13.JPG" alt="Perkenalan 4"/></a></div>
-          <div class="card" data-groups="[&quot;perkenalan&quot;]"><a href="images/gallery/14.JPG" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery/14.JPG" alt="Perkenalan 5"/></a></div>
-          <div class="card" data-groups="[&quot;perkenalan&quot;]"><a href="images/gallery/15.JPG" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery/15.JPG" alt="Perkenalan 6"/></a></div>
-          <div class="card" data-groups="[&quot;perkenalan&quot;]"><a href="images/gallery/16.JPG" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery/16.JPG" alt="Perkenalan 7"/></a></div>
-          <div class="card" data-groups="[&quot;perkenalan&quot;]"><a href="images/gallery/17.JPG" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery/17.JPG" alt="Perkenalan 8"/></a></div>
+          <div class="card" data-groups="[&quot;perkenalan&quot;]"><a href="images/gallery/14.JPG" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery/14.JPG" alt="Perkenalan 4"/></a></div>
+          <div class="card" data-groups="[&quot;perkenalan&quot;]"><a href="images/gallery/15.JPG" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery/15.JPG" alt="Perkenalan 5"/></a></div>
+          <div class="card" data-groups="[&quot;perkenalan&quot;]"><a href="images/gallery/16.JPG" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery/16.JPG" alt="Perkenalan 6"/></a></div>
+          <div class="card" data-groups="[&quot;perkenalan&quot;]"><a href="images/gallery/17.JPG" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery/17.JPG" alt="Perkenalan 7"/></a></div>
           <div class="card" data-groups="[&quot;lamaran&quot;]"><a href="images/gallery/18.jpg" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery/18.jpg" alt="Lamaran 1"/></a></div>
           <div class="card" data-groups="[&quot;lamaran&quot;]"><a href="images/gallery/19.jpg" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery/19.jpg" alt="Lamaran 2"/></a></div>
           <div class="card" data-groups="[&quot;lamaran&quot;]"><a href="images/gallery/20.jpg" data-toggle="lightbox" data-gallery="ww-gallery"><img class="img-fluid" src="images/gallery/20.jpg" alt="Lamaran 3"/></a></div>
@@ -196,12 +184,12 @@
   </div>
 </div></div>
     </div>
-    <audio type="audio/mp3" src="music.mp3" autoplay loop>
-    <script type="text/javascript" src="scripts/jquery.min.js?ver=1.1.0"></script>
-    <script type="text/javascript" src="scripts/bootstrap.bundle.min.js?ver=1.1.0"></script>
-    <script type="text/javascript" src="scripts/aos.js?ver=1.1.0"></script>
-    <script type="text/javascript" src="scripts/ekko-lightbox.min.js?ver=1.1.0"></script>
-    <script type="text/javascript" src="scripts/main.js?ver=1.1.0"></script>
+    <!-- <audio type="audio/mp3" src="music.mp3" autoplay loop> -->
+    <script type="text/javascript" src="scripts/jquery.min.js"></script>
+    <script type="text/javascript" src="scripts/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="scripts/aos.js"></script>
+    <script type="text/javascript" src="scripts/ekko-lightbox.min.js"></script>
+    <script type="text/javascript" src="scripts/main.js"></script>
     <script type="text/javascript" src="scripts/jquery.countdown.js"></script>
     <script type="text/javascript" src="scripts/snow.js" type="text/javascript"></script>
   </body>
