--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Rizkia & Tovik</h2>
     <div class="row text-center">      
       <div class="col-md-6">
-        <div class="mt-3"><img class="img-fluid" style="height: auto;" src="images/kia.JPG" alt="Bride" data-aos="flip-right" data-aos-duration="1000"/>
+        <div class="mt-3"><img class="img-fluid" style="height: auto;" src="images/kia.jpg" alt="Bride" data-aos="flip-right" data-aos-duration="1000"/>
           <p class="pt-3 text-center text-muted">Putri pertama dari Bpk. Akhirizal Lubis, S.Pd. dan Ibu Rosmaniah, S.E..</p>
           <h3 class="h2 ww-title">Rizkia Maulidini Lubis, S.Ak.</h3>
           <div class="ww-social-links">
@@ -68,7 +68,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <div class="mt-3"><img class="img-fluid" style="height: auto;" src="images/tovik.JPG" alt="Groom" data-aos="flip-left" data-aos-duration="1000"/>
+        <div class="mt-3"><img class="img-fluid" style="height: auto;" src="images/tovik.jpg" alt="Groom" data-aos="flip-left" data-aos-duration="1000"/>
           <p class="pt-3 text-center text-muted">Putra kedua dari Bpk. Suhadi (Alm) dan Ibu Purwatin</p>
           <h3 class="h2 ww-title">Briptu Tovik Akbar</h3>
           <div class="ww-social-links">
