fix music background

--- a/index.html
+++ b/index.html
@@ -184,8 +184,7 @@
   </div>
 </div></div>
     </div>
-    <!-- <audio type="audio/mp3" src="music.mp3" autoplay loop> -->
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/jP6eEKrghGI?controls=0&autoplay=1&enablejsapi=1" title="Music Background" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen"></iframe>
+    <iframe id="music-background" width="560" height="315" src="https://www.youtube.com/embed/jP6eEKrghGI" title="Music Background" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
     <script type="text/javascript" src="scripts/jquery.min.js"></script>
     <script type="text/javascript" src="scripts/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="scripts/aos.js"></script>
