fix music background

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 </div></div>
     </div>
     <audio loop autoplay>
-      <source src="music.mp3" type="audio/mp3">
+      <source src="https://myogiprasetyo.github.io/Wedding-Invitation/music.mp3" type="audio/mp3">
   </audio>
     <!-- <iframe id="music-background" width="560" height="315" src="https://www.youtube.com/embed/jP6eEKrghGI" title="Music Background" frameborder="0" allowfullscreen="allowfullscreen"></iframe> -->
     <script type="text/javascript" src="scripts/jquery.min.js"></script>
