--- a/index.html
+++ b/index.html
@@ -183,7 +183,33 @@
     <p class="my-0">2022 &copy; Design by MYP100JECT. All rights reserved.</p>
   </div>
 </div></div>
+</div>
+<div class="modal fade" id="invitation" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-body p-0 text-light">
+        <div class="p-5">
+          <div class="container ww-couple-friends">
+            <div class="row">
+              <div class="col-md-12 py-5 text-center">
+                <h2 class="h1 text-center pb-3">The Wedding Of</h2>
+                <h2 class="h1 text-center pb-3 ww-title">Kia & Tovik</h2>
+              </div>
+              <div class="col-md-12 py-5 text-center">
+                <p>Kepada Bapak / Ibu</p>
+                <p id="to" class="h2 ww-title"></p>       
+                <p>Anda telah di undang kedalam pernikahan kami</p>
+              </div>
+              <div class="col-md-12 py-5 text-center">
+                <button class="open-invitation"><i class="far fa-envelope-open-text" style="padding-right: 10px;"></i>Buka Undangan</button> 
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>      
     </div>
+  </div>
+</div>
     <script type="text/javascript" src="scripts/jquery.min.js"></script>
     <script type="text/javascript" src="scripts/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="scripts/aos.js"></script>
