--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <p>Anda telah di undang kedalam pernikahan kami</p>
               </div>
               <div class="col-md-12 py-5 text-center">
-                <button class="open-invitation"><i class="far fa-envelope-open-text" style="padding-right: 10px;"></i>Buka Undangan</button> 
+                <button class="open-invitation"><i class="far fa-envelope" style="padding-right: 10px;"></i>Buka Undangan</button> 
               </div>
             </div>
           </div>
